--- a/lib/client/app/application/pages/info/partials/info-template.html
+++ b/lib/client/app/application/pages/info/partials/info-template.html
@@ -1,10 +1,3 @@
-<style>
-.interior-page-background {
-    background: url('{{infoPage.data.page.foreground.images.source}}') no-repeat;
-    background-size: cover; width: 100%!important; height: 100%; 
-    right: 0; top: 400px; padding:0; margin: 0!important; opacity: 0.1;
-}
-</style>
 <md-content class="page" style="height: {{window_height}}px">
 	<section style="background: {{base_hue_lightest.value}}">
 		
@@ -16,37 +9,27 @@
 
 		<div ng-include src="'application/partials/navigation-menu.html'"></div>
 
-		<md-button ng-if="user" ng-click="edit(infoPage.settings.configs, infoPage)" class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: fixed; bottom: 128px; right: 24px;">
+		<md-button ng-if="me.security.roles == 'management'" ng-click="edit(infoPage.settings.configs, infoPage)" class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: fixed; bottom: 128px; right: 24px;">
 	        <md-icon style="color: {{base_hue_lighter.value}};">build</md-icon>
 	    </md-button>
 
 
 		
 		
-		<div class="interior-page" flex="100" layout="row" layout-wrap style="width: 100%;">
+		<div class="interior-page" flex="100" layout="row" layout-align="center start" layout-wrap style="width: 100%;">
 
-			<!-- Shrinking Page Title -->
-			<div flex ng-attr-style="background-color: {{primary_hue_normal.value}}; opacity: .9; height: 200px; line-height: 150px; min-width: 100%; position: relative; top: 0; overflow: hidden; text-align: center;">
-				<div style="width: 100%; height: 100%; position: absolute; z-index: -1!important">
-				    <div class="interior-page-background"></div>
+			<!-- Page Title -->
+			<div layout="row" flex="100" flex-sm="100" flex-gt-sm="100" style="height: 600px; position: relative; top: 0; margin: 0; padding: 0; overflow: hidden; text-align: center;">
+				<div style="width: 100%; height: 100%; position: absolute; margin: 0;">
+				    <img style="min-height: 100%; min-width: 100%; height: auto; width: auto;" ng-src="{{infoPage.data.page.foreground.images.source}}">
 				</div>
-				<h2 style="color: {{base_hue_text__lightest.value}}" class="type heading">{{infoPage.data.title}}</h2>
+				<h2 style="color: {{base_hue_text__lightest.value}}; position: relative; margin: auto; text-shadow: 1px 1px 8px rgba(0, 0, 0, .8);" class="type simulated">{{infoPage.data.title}}</h2>
 			</div>
-			<!-- Shrinking Page Title -->
+			<!-- =Page Title -->
 
 			<!-- tab Panel Component -->
-		    <div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="66" style="z-index: 3;" layout-padding>
+		    <md-card class="md-whiteframe-8dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="50" style="z-index: 3;" layout-padding>
 
-			    <div flex="100" layout="row">
-					<!-- panel images -->
-					<md-card flex="100" class="lightweight-card-image md-whitefrap-2dp" style="margin: 0; overflow: hidden;">
-						<img ng-src="{{infoPage.data.page.foreground.images.source}}" class="md-card-image">
-					</md-card>
-					<!-- panel images -->
-				</div>
-
-		    	<br>
-		    	<br>
 		    	<div ng-repeat="content in infoPage.data.page.contents" flex="100">
 		    		<h1 class="h1 base-hdst--text" ng-if="content.type == 'title'" ng-bind-html="content.data" style="margin-top: 8px;"></h1>
 					<p class="base-hdst--text" ng-if="content.type == 'text'" ng-bind-html="content.data"></p>
@@ -63,11 +46,11 @@
                     </a>
 		        </div>
 
-		    </div>
+		    </md-card>
 		    <!-- tab Panel Component -->
 
             <!-- Map Widget -->
-            <div flex="100" flex-sm="100" flex-gt-sm="33" layout="row" layout-align="center start" style="background-color: {{base_hue_lightest.value}}; z-index: 2;">
+            <div class="md-whiteframe-8dp" flex="90" flex-sm="90" flex-gt-sm="25" layout="row" layout-align="center start" style="background-color: {{base_hue_lightest.value}}; z-index: 2;">
 				<div layout-wrap layout="row" layout-align="start center" flex>
 					<div flex style="margin-bottom: -5px; position: relative;" layout-align="end center" layout-padding>
 						<iframe ng-src="{{trusted_google_address_widget_map}}" width="auto" height="600" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
