--- a/lib/client/app/application/pages/info/partials/info-template.html
+++ b/lib/client/app/application/pages/info/partials/info-template.html
@@ -21,7 +21,7 @@
 			<!-- Page Title -->
 			<div layout="row" flex="100" flex-sm="100" flex-gt-sm="100" style="height: 600px; position: relative; top: 0; margin: 0; padding: 0; overflow: hidden; text-align: center; background-color: {{base_hue_darker_darkest_opacity.value}};">
 				<div style="width: 100%; height: 100%; position: absolute; margin: 0;">
-				    <img style="opacity: .6; min-height: 100%; min-width: 100%; height: auto; width: auto;" ng-src="{{infoPage.data.page.foreground.images.source}}">
+				    <img style="min-height: 100%; min-width: 100%; height: auto; width: auto;" ng-src="{{infoPage.data.page.foreground.images.source}}">
 				</div>
 				<h2 style="color: {{base_hue_text__lightest.value}}; position: relative; margin: auto; text-shadow: 1px 1px 8px rgba(0, 0, 0, .8);" class="type simulated">{{infoPage.data.title}}</h2>
 			</div>
@@ -51,7 +51,7 @@
 
             <!-- Map Widget -->
             <div class="md-whiteframe-8dp" flex="90" flex-sm="90" flex-gt-sm="25" layout="row" layout-align="center start" style="z-index: 2; position: relative;" layout-margin>
-				<div layout-wrap layout="row" layout-align="start center" flex>
+				<div style="margin: 0;" layout-wrap layout="row" layout-align="start center" flex>
 					<div flex style="margin-bottom: -5px; position: relative;" layout-align="end center">
 						<iframe ng-src="{{trusted_google_address_widget_map}}" width="auto" height="600" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
 					</div>
