--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -18,7 +18,7 @@
 			<!-- Page Title -->
 			<div class="md-whiteframe-8dp" layout-margin layout="row" flex="90" flex-sm="90" flex-gt-sm="75" style="height: 600px; position: relative; top: 0; overflow: hidden; text-align: center; background-color: {{base_hue_darker_darkest_opacity.value}}; margin-top: 16px;">
 				<div style="width: 100%; height: 100%; position: absolute; margin: 0;">
-				    <img style="opacity: .3; min-height: 100%; min-width: 100%; height: auto; width: auto;" ng-src="{{blogPage.data.page.background.images.source}}">
+				    <img style="min-height: 100%; min-width: 100%; height: auto; width: auto;" ng-src="{{blogPage.data.page.background.images.source}}">
 				</div>
 				<h2 style="color: {{base_hue_text__lightest.value}}; position: relative; margin: auto; text-shadow: 1px 1px 8px rgba(0, 0, 0, .8);" class="type simulated">{{blogPage.data.title}}</h2>
 			</div>
