--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -94,7 +94,7 @@
 					<md-icon style="color: {{base_hue_lightest.value}}; font-weight: bold;">keyboard_arrow_right</md-icon>
 				</md-button>
 				<div class="projects panel" style="left: 0; width: {{scroll_bar_aware_window_width * planning_row.panel_width}}px; transform:translate({{planning_row.amount_to_slide}},0);" ng-swipe-left="planning_row.panel_swipe('left')" ng-swipe-right="planning_row.panel_swipe('right')">
-					<div layout-padding class="projects-listing" ng-repeat="item in planning_row.data" ng-class="{'one-half': window_width >= 960, 'full-width': window_width < 960 && window_width > 600, 'full-width': window_width < 600}">
+					<div layout-padding class="projects-listing" ng-repeat="item in planning_row" ng-class="{'one-half': window_width >= 960, 'full-width': window_width < 960 && window_width > 600, 'full-width': window_width < 600}">
 						<md-card class="md-whiteframe-6dp" layout="column" layout-sm="row" layout-gt-sm="100" layout-wrap layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
 							<div class="post-image" flex="100" flex-sm="100" flex-gt-sm="50" style="padding: 0;">
 								<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
@@ -106,7 +106,7 @@
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
-									<p style="color: {{base_hue_darker.value}};">Welcome to MMA's new web experience!</p>
+									<p style="color: {{base_hue_darker.value}};">{{item.data.description}}</p>
 								</md-card-content>
 							</div>
 						</md-card>
