--- a/lib/client/app/application/pages/team/partials/team-template.html
+++ b/lib/client/app/application/pages/team/partials/team-template.html
@@ -16,105 +16,10 @@
 
 		<div ng-include src="'application/partials/navigation-menu.html'"></div>
 
-		<md-button ng-if="me.security.roles == 'management'" ng-click="edit(spotlightPage.settings.configs, spotlightPage)" class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: fixed; bottom: 128px; right: 24px;">
-	        <md-icon style="color: {{base_hue_lighter.value}};">build</md-icon>
-	    </md-button>
-
-	    <div class="interior-page" flex="100" layout="row" layout-align="center start" layout-wrap style="width: 100%;">
-
-			<!-- Page Title -->
-			<div class="spotlight hero" layout="row" flex="100" style="position: relative; top: 0; overflow: hidden; text-align: center; background-color: {{primary_hue_normal.value}};">
-				<div style="width: 100%; height: 100%; position: absolute;">
-				    <img style="opacity: .1; min-width: 100%; min-height: 100%; width: auto; height: auto;" ng-src="{{spotlightPage.data.page.background.images.source}}">
-				</div>
-			</div>
-			<!-- =Page Title -->
-			
-			<md-card class="md-whiteframe-8dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="50" layout-align="start start" ng-attr-style="margin-top: -400px; z-index: 1; min-height: 800px; background-color: {{base_hue_lightest.value}}; padding: 0; position: relative;">
-				<div flex="100" style="height: 400px; width: 100%; margin: 0; overflow: hidden; position: relative;">
-					<img style="min-height: 100%; min-width: 100%; height: auto; width: auto; position: absolute; top: -75%; left: -16.5%;" ng-src="{{spotlightPage.data.page.background.images.source}}">
-				</div>
-				<md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; top: 364px; right: 8px;">
-			        <md-icon style="color: {{base_hue_lighter.value}};">share</md-icon>
-			    </md-button>
-		    	<div flex="100" ng-attr-style="margin-bottom: 100px; width: 100%; background-color: {{base_hue_lightest.value}}; min-height: 400px;" layout-margin layout-padding>
-		    		<h1 class="type simulated" style="margin-bottom: 24px;">{{spotlightPage.data.title}}</h1>
-			    	<div ng-repeat="content in spotlightPage.data.page.contents">
-			    		<h1 class="type heading-2 base-hdst--text" ng-if="content.type == 'title'" ng-bind-html="content.data" style="margin-top: 8px; margin-bottom: 8px;"></h1>
-						<p class="base-hdst--text" ng-if="content.type == 'text'" ng-bind-html="content.data"></p>
-						<p class="base-hdst--text" ng-repeat="listItem in content.data track by $index" ng-if="content.type == 'list'">&bull;&nbsp;&nbsp;{{listItem.item}}</p>
-						<div style="width: 100%; padding: 0">
-							<!-- panel images -->
-								<md-card ng-cloak class="lightweight-card-image md-whiteframe-2dp" ng-if="content.type == 'image'" ng-attr-style="position: relative;">
-									<img ng-src="{{content.source ? content.source : 'https://storage.googleapis.com/spsd-189118.appspot.com/missing-image.png'}}" class="md-card-image">
-								</md-card>
-							<!-- panel images -->
-						</div>
-						<a ng-if="content.type == 'button'" href="{{content.data.url}}">
-	                        <md-button class="md-raised" style="margin-top: 8px; margin-bottom: 16px; background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">{{content.data.button}}</md-button>
-	                    </a>
-			        </div>
-		    	</div>
-
-			</md-card>
-
-			<div class="md-whiteframe-8dp sidebar form" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="25" layout-align="start start" ng-attr-style="z-index: 1; min-height: 200px; background-color: {{base_hue_lightest.value}}; padding: 0;">
-				<md-card ng-attr-style="background: {{base_hue_lightest.value}}; width: 100%; position: relative; margin: 0;">
-	                <form name="spotlight">
-	                	<div style="text-align: left; padding-left: 16px; border-left: 4px solid {{primary_hue_normal.value}}; box-sizing: border-box;">
-	                		<h1 style="color: {{primary_hue_normal.value}};">Contact mma Today!</h1>
-	                	</div>
-	                    <md-card-content>
-	                        <md-list-item>
-	                            <md-input-container class="md-block lightweight-md-input">
-	                                <label>Full Name</label>
-	                                <input name="name" ng-model="spotlight_page_contact_form.name" minlength="4" required>
-	                                <div ng-messages="spotlight.name.$error" ng-show="spotlight.name.$dirty">
-	                                    <div ng-message="required">Name required!</div>
-	                                    <div ng-message="minlength">Name too short!</div>
-	                                </div>
-	                            </md-input-container>
-	                        </md-list-item>
-	                        <md-list-item>
-	                            <md-input-container class="md-block lightweight-md-input">
-	                                <label>Email</label>
-	                                <input type="email" name="email" ng-model="spotlight_page_contact_form.email" required>
-	                                <div ng-messages="spotlight.email.$error" ng-show="spotlight.email.$dirty">
-	                                    <div ng-message="required">Email required!</div>
-	                                    <div ng-message="email">Enter a valid email!</div>
-	                                </div>
-	                            </md-input-container>
-	                        </md-list-item>
-	                        <md-list-item>
-                                <md-input-container class="md-block lightweight-md-input">
-                                    <label>Phone</label>
-                                    <input ng-model="spotlight_page_contact_form.phone" ng-pattern="/^[(]{0,1}[0-9]{3}[)]{0,1}[-\s\.]{0,1}[0-9]{3}[-\s\.]{0,1}[0-9]{4}$/" name="phone" minlength="10" required>
-                                    <div ng-messages="spotlight.phone.$error" ng-show="spotlight.phone.$dirty">
-                                        <div ng-message="required">Phone number required!</div>
-                                        <div ng-message="minlength">Phone number too short!</div>
-                                        <div ng-message="pattern">Not a valid phone number!</div>
-                                    </div>
-                                </md-input-container>
-                            </md-list-item>
-	                        <md-list-item>
-	                        	<md-input-container class="md-block lightweight-md-input" flex>
-	                                <label>Message</label>
-	                                <textarea name="message" md-detect-hidden="true" ng-model="spotlight_page_contact_form.message" rows="3" minlength="10" md-maxlength="250" required></textarea>
-	                                <div ng-messages="spotlight.message.$error" ng-show="spotlight.message.$dirty">
-	                                    <div ng-message="required">Message required!</div>
-	                                    <div ng-message="minlength">Message too short!</div>
-	                                    <div ng-message="md-maxlength">Message too long!</div>
-	                                </div>
-	                            </md-input-container>
-	                        </md-list-item>
-	                    </md-card-content>
-	                    <md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -36px; right: 8px;">
-					        <md-icon style="color: {{base_hue_lighter.value}};">send</md-icon>
-					    </md-button>
-	                </form>
-	            </md-card>
-			</div>
-
+	    <div class="interior-page" flex="100" layout="row" layout-wrap layout-align="center start" layout-wrap style="width: 100%;">
+	    	<md-card class="md-whiteframe-6dp" flex="100" flex-sm="50" flex-gt-sm="33" ng-repeat="member in settings.staff.members">
+	    		<img ng-src="{{member.source || '/assets/design/missing-person-image.gif'}}" class="md-card-image" alt="Washed Out">
+	    	</md-card>
 		</div>
 
 	</section>
